@@ -1,7 +1,7 @@
 .\" $Id: pkg_replace.1,v 1.2 2007/01/25 12:25:56 securedog Exp $
 .\"
-.\" Modified by Ken DEGUCHI (October 12, 2022)"
-.Dd October 12, 2022
+.\" Modified by Ken DEGUCHI (November 28, 2022)"
+.Dd November 28, 2022
 .Dt PKG_REPLACE 1
 .Os
 .Sh NAME
